# Friday

./: .env  .env.example  .gitignore  LICENSE  README.md  friday  main.py  pyproject.toml  requirements.txt  run.sh
agent/: agent.py
client/: llm_client.py
context/: __init__.py
friday_ai/: __init__.py  __main__.py  main.py
friday_ai/agent/: __init__.py  agent.py  events.py  persistence.py  session.py
friday_ai/client/: __init__.py  llm_client.py
friday_ai/config/: __init__.py  config.py  loader.py
friday_ai/context/: __init__.py  compaction.py  manager.py
friday_ai/hooks/: __init__.py  hook_system.py
friday_ai/prompts/: __init__.py  system.py
friday_ai/safety/: __init__.py  approval.py
friday_ai/tools/: __init__.py  base.py  discovery.py  registry.py  subagents.py
friday_ai/tools/builtin/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  memory.py  read_file.py  shell.py  todo.py  web_fetch.py  web_search.py  write_file.py
friday_ai/tools/mcp/: __init__.py  client.py  mcp_manager.py  mcp_tool.py
friday_ai/ui/: __init__.py  tui.py
friday_ai/utils/: __init__.py
tests/: __init__.py  test_all_tools.py  test_real_world.py  test_security.py
tools/builtin/: grep.py  read_file.py  web_search.py
ui/: tui.py
utils/: text.py
