[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-ai-teammate"
version = "0.0.2"
description = "Friday AI Teammate - A powerful AI coding assistant for your terminal"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "mk-knight23", email = "mk-knight23@users.noreply.github.com"}
]
keywords = ["ai", "assistant", "cli", "coding", "agent", "llm", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0",
    "httpx>=0.25.0",
    "ddgs>=6.0.0",
    "fastmcp>=0.4.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
friday = "friday_ai.main:main"

[project.urls]
Homepage = "https://github.com/mk-knight23/Friday"
Repository = "https://github.com/mk-knight23/Friday"
Issues = "https://github.com/mk-knight23/Friday/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["friday_ai*"]

[tool.setuptools.package-data]
friday_ai = ["*.txt", "*.md"]
